<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cmr.andpush.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/lblStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/not_registered" />
    
    <Button
        android:id="@+id/btnRegisterWithGcm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblStatus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/register_with_gcm" />

    <TextView
        android:id="@+id/lblRegistrationId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegisterWithGcm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp" />

    <Button
        android:id="@+id/btnRegisterWithNoTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblRegistrationId"
        android:layout_centerHorizontal="true"
        android:text="@string/register_with_no_tags" />

    <Button
        android:id="@+id/btnRegisterWithTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegisterWithNoTags"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/register_with_tags" />

    <Button
        android:id="@+id/btnRegisterWithTemplates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRegisterWithTags"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/register_with_templates" />

</RelativeLayout>
